fixed overflow issue

--- a/main.scss
+++ b/main.scss
@@ -14,6 +14,9 @@ body {
     
     height: 100%;
     background-color:$bgColor;
+    @media only screen and (max-width: 450px) {
+      margin: 0 15px;
+    }
     
 }
 
